--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -22,7 +22,6 @@
     5 - Fixed Layer
 
     6 - Footer
-        6.1 - Yandex map
 
     7 - Mobile right menu
 
@@ -66,14 +65,13 @@ a:focus {
 }
 
 .form-control:focus {
-    border: 0 1px 0 0;
-    border-color: #fff;
     box-shadow: none;
+    border-color: #777;
 }
 
 .pos_rel {
     position: relative;
-    min-height: 100vh;
+    height: 100%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -82,6 +80,7 @@ a:focus {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+    padding-bottom: 20px;
 }
 
 .section {
@@ -107,30 +106,8 @@ a:focus {
     opacity: 0;
 }
 
-
-
 .fade {
     transition: opacity .5s ease-in-out;
-}
-
-.btn-border {
-    border: 2px solid #379889;
-    padding: 6px 66px;
-    background-color: white;
-    border-radius: 0;
-    color: #379889;
-    font-size: 28px;
-    text-transform: uppercase;
-    transition: all .2s
-}
-
-.btn-border:hover {
-    background-color: #379889;
-    color: white;
-}
-
-.text-blue {
-    color: #56b3a5;
 }
 
 .mb-20 {
@@ -154,12 +131,50 @@ a:focus {
 }
 
 
+#gallery .section-title {
+    margin-bottom: 45px;
+}
+
+.navbar-nav>li>a {
+    font-family: 'Montserrat', sans-serif;
+}
+
+#navbar_search input {
+    font-family: 'Raleway', sans-serif;
+}
+
+#footer .form-control,
+.section-short,
+#menu_items .info .short {
+    font-family: 'Montserrat', sans-serif;
+}
+
+#about_us .short,
+.carousel-caption p {
+    font-family: 'Montserrat', sans-serif;
+}
+
+#menu_items .info .name {
+    font-weight: 600;
+    font-family: 'Raleway', sans-serif;
+}
+
+.carousel-caption h1,
+#about_us .title,
+.section-title,
+.btn-border,
+#footer .control-label,
+.item_name {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+
+
 /*----------------------------------------
 
   1.1.  Fonts
 
 /*----------------------------------------*/
-  
   
 @font-face {
     font-family: 'butazzo';
@@ -294,45 +309,6 @@ a:focus {
     content: "\eaca";
   }
 
-
-
-#gallery .section-title {
-    margin-bottom: 45px;
-}
-
-.navbar-nav>li>a {
-    font-family: 'Montserrat', sans-serif;
-}
-
-#navbar_search input {
-    font-family: 'Raleway', sans-serif;
-}
-
-#footer .form-control,
-.section-short,
-#menu_items .info .short {
-    font-family: 'Montserrat', sans-serif;
-}
-
-#about_us .short,
-.carousel-caption p {
-    font-family: 'Montserrat', sans-serif;
-}
-
-#menu_items .info .name {
-    font-weight: 600;
-    font-family: 'Raleway', sans-serif;
-}
-
-.carousel-caption h1,
-#about_us .title,
-.section-title,
-.btn-border,
-#footer .control-label,
-.item_name {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-}
 
 
 /*----------------------------------------
@@ -591,7 +567,7 @@ a:focus {
     background: url('../img/slider_2.jpg') top center no-repeat;
     background-size: cover;
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .carousel:after {
@@ -609,6 +585,7 @@ a:focus {
     width: auto;
     margin-left: 0;
     transform: translateX(-50%);
+    margin-bottom: 0;
 }
 
 .carousel-indicators li {
@@ -656,7 +633,7 @@ a:focus {
 }
 
 .carousel-inner .carousel-item {
-    height: 634px;
+    min-height: 100vh;
     background-position: center;
     background-size: cover;
     transition-duration: .3s;
@@ -670,6 +647,8 @@ a:focus {
     text-shadow: none;
     padding: 0;
     text-align: left;
+    display: flex;
+    align-items: center;
 }
 
 .carousel-caption h1 {
@@ -691,25 +670,8 @@ a:focus {
     text-transform: uppercase;
 }
 
-/*.item_name:after {*/
-/*    content: "";*/
-/*    width: 98px;*/
-/*    height: 4px;*/
-/*    background-color: #f6a525;*/
-/*    position: absolute;*/
-/*    right: 0;*/
-/*    bottom: 0;*/
-/*}*/
-
 .item_img {
-    float: left;
-    margin: 0 50px;
     position: relative;
-    padding-bottom: 20px;
-}
-
-.item_img {
-    width: 600px;
     display: flex;
     justify-content: center;
 }
@@ -791,7 +753,6 @@ a:focus {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    padding-top: 40px;
 }
 
 .carousel-caption h1 .border-top:before,
@@ -828,7 +789,6 @@ a:focus {
 .carousel-caption p {
     color: #fff;
     font-size: 15px;
-    /*text-align: right;*/
 }
 
 .carousel-caption .fadeUp,
@@ -916,41 +876,9 @@ a:focus {
   3.1.  About Us
 
 /*----------------------------------------*/
-#about_us {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
 
-#about_us .content {
-    padding: 40px;
+.about-img {
     max-width: 100%;
-}
-
-.about_img {
-    max-width: 100%;
-}
-
-#about_us .row {
-    position: relative;
-}
-
-#about_us .img {
-    z-index: 9;
-}
-
-#about_us .title {
-    margin-bottom: 20px;
-}
-
-#about_us .short {
-    color: #6c6c6c;
-    font-size: 17px;
 }
 
 .border_on {
@@ -1034,9 +962,9 @@ a:focus {
 
 .menu-slider-item-btn {
     background-color: #f5b200;
-    color: #333;
-    padding: 5px 10px;
-    border-radius: 6px;
+    color: #fff;
+    padding: 6px 12px;
+    border-radius: 15px;
     font-weight: 600;
     font-size: 15px;
     z-index: 1;
@@ -1044,6 +972,11 @@ a:focus {
     bottom: -10px;
     position: relative;
     transition: all 500ms ease-in-out;
+}
+
+.menu-slider-item-btn:hover {
+    color: #fff;
+    background-color: #f22e3e;
 }
 
 .menu-slider-item:hover .menu-slider-item-btn { 
@@ -1098,12 +1031,8 @@ a:focus {
     transition: all .3s ease-out;
 }
 
-.menu_filter .item a:hover i {
-    color: #f22e3e;
-}
-
-.menu_filter .item a:hover span {
-    color: #000;
+.menu_filter .item a:hover {
+    color: #9f9f9f;
 }
 
 .menu_filter .item a.active i {
@@ -1263,74 +1192,11 @@ a:focus {
 
 
 
-.whours {
-    padding-top: 30px;
-}
-
-.whours-list {
-    list-style: none;
-    padding-left: 0;
-    margin: 30px 0;
-}
-
-.whours-list li {
-    color: #777;
-    font-size: 16px;
-    font-weight: 500;
-    margin-bottom: 10px;
-}
-
-.whours-list li strong {
-    width: 150px;
-    display: inline-block;
-}
-
-.coupon {
-    margin-top: 40px;
-}
-
-.coupon-note {
-    color: #777;
-    font-size: 16px;
-    font-weight: 500;
-}
-
-.coupon-btn {
-    background: #ffd630;
-    font-size: 20px;
-    font-weight: 600;
-    text-transform: uppercase;
-    padding: 12px 30px;
-    margin-top: 10px;
-    border-radius: 50px;
-    color: #fff;
-    border: none;
-    -webkit-transition: all .3s ease-out;
-    -moz-transition: all .3s ease-out;
-    -ms-transition: all .3s ease-out;
-    -o-transition: all .3s ease-out;
-    transition: all .3s ease-out;
-}
-
-.coupon-btn:hover {
-    background-color: #f5b200;
-    color: #fff;
-}
-
-
-
-
-
-
-
 /*-----------------------------------------
 
   3.3.  Photo Gallery
 
 /*----------------------------------------*/
-
-
-
 
 .category_filter {
     margin-bottom: 80px;
@@ -1389,7 +1255,6 @@ a:focus {
     transition: all .3s ease-out;
 }
 
-
 .category_filter .item a:focus {
     background-color: transparent;
     border: none;
@@ -1402,12 +1267,6 @@ a:focus {
     color: #fff;
     opacity: 1;
 }
-
-
-
-
-
-
 
 #photo_gallery {
     height: 100%;
@@ -1435,7 +1294,6 @@ a:focus {
     position: relative;
     overflow: hidden;
 }
-
 
 .igall-details {
     padding: 25px;
@@ -1586,6 +1444,10 @@ section.chef {
     padding-top: 30px;
 }
 
+#chef-slider .slick-list {
+    border-radius: 16px;
+}
+
 #chef-slider .slick-prev,
 #chef-slider .slick-next {
     background-color: #fff;
@@ -1648,6 +1510,8 @@ section.chef {
     position: relative;
     margin-left: 15px;
     margin-right: 15px;
+    border-radius: 16px;
+    overflow: hidden;
 }
 
 .chef-image {
@@ -1721,14 +1585,12 @@ section.chef {
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    /* color: #f6a525; */
     color: #000;
     text-transform: uppercase;
     user-select: text;
     text-align: center;
     margin-bottom: 10px;
     margin-top: 0;
-    /* opacity: 0; */
     -webkit-transition: opacity 0.35s;
     -o-transition: opacity 0.35s;
     transition: opacity 0.35s;
@@ -1760,6 +1622,59 @@ section.chef {
   3.5.  Reservation
 
 /*----------------------------------------*/
+.whours {
+    padding-top: 30px;
+}
+
+.whours-list {
+    list-style: none;
+    padding-left: 0;
+    margin: 30px 0;
+}
+
+.whours-list li {
+    color: #777;
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.whours-list li strong {
+    width: 150px;
+    display: inline-block;
+}
+
+.coupon {
+    margin-top: 40px;
+}
+
+.coupon-note {
+    color: #777;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.coupon-btn {
+    background: #ffd630;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 12px 30px;
+    margin-top: 10px;
+    border-radius: 50px;
+    color: #fff;
+    border: none;
+    -webkit-transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -ms-transition: all .3s ease-out;
+    -o-transition: all .3s ease-out;
+    transition: all .3s ease-out;
+}
+
+.coupon-btn:hover {
+    background-color: #f22e3e;
+    color: #fff;
+}
 
 .reserv_box {
     padding-top: 30px;
@@ -2018,7 +1933,6 @@ section.chef {
 }
 
 
-
 /*---------------------------------------- 
 ==========================================
 
@@ -2067,6 +1981,10 @@ section.chef {
     font-weight: 500;
 }
 
+.footer-nav a:hover {
+    color: #333;
+}
+
 .footer-ttl {
     font-size: 18px;
     font-weight: 600;
@@ -2113,6 +2031,10 @@ section.chef {
     font-weight: 500;
 }
 
+.copyr-link a:hover {
+    color: #333;
+}
+
 .copyr {
     padding: 15px 0;
 }
@@ -2150,17 +2072,6 @@ section.chef {
 
 
 
-/*----------------------------------------
-
-  6.1.  Yandex map
-
-/*----------------------------------------*/
-
-#map {
-    height: 500px;
-}
-
-
 /*---------------------------------------- 
 ==========================================
 
@@ -2171,20 +2082,21 @@ section.chef {
 
 .rmenu_list li a {
     font-size: 15px;
-    color: #fff;
+    color: #777;
     display: block;
     padding: 8px 15px;
     letter-spacing: 1px;
 }
 
 .rmenu_list li a:hover {
-    background-color: #990100;
+    background-color: #f5b200;
+    color: #fff;
 }
 
 .cd-nav-container .header__open_menu {
     background: none;
     text-align: left;
-    padding: 20px 15px;
+    padding: 0 15px;
 }
 
 #cd-nav .rmenu_list {
@@ -2258,27 +2170,10 @@ section.chef {
     width: 44px;
 }
 
-.cd-nav-trigger span {
-    position: absolute;
-    left: 48%;
-    top: 45%;
-    bottom: auto;
-    right: auto;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -o-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    width: 16px;
-    height: 16px;
-    background-color: transparent;
-    color: #fff;
-}
-
 .cd-nav-container {
     padding-right: 0;
     width: 80%;
-    background-color: #f6a525;
+    background-color: #fff;
 }
 
 .rmenu_lang {
@@ -2317,6 +2212,11 @@ section.chef {
     margin-right: 10px;
 }
 
+.right_menu_icon i {
+    font-size: 28px;
+    color: #fff;
+}
+
 .right_menu {
     right: 0;
     -webkit-transform: translateX(100%);
@@ -2328,6 +2228,7 @@ section.chef {
 
 .cd-nav-container {
     z-index: 1000;
+    padding: 20px 0;
 }
 
 .cd-overlay {
@@ -2421,23 +2322,25 @@ section.chef {
 .spinner span:nth-of-type(2) {
     -webkit-animation-delay: 0.2s;
     animation-delay: 0.2s;
-    left: 20px;
+    left: 24px;
+    background-color: #f22e3e;
 }
 
 .spinner span:nth-of-type(3) {
-    left: 40px;
+    left: 48px;
     -webkit-animation-delay: 0.4s;
     animation-delay: 0.6s;
 }
 
 .spinner span:nth-of-type(4) {
-    left: 60px;
+    left: 72px;
     -webkit-animation-delay: 0.6s;
     animation-delay: 0.6s;
+    background-color: #f22e3e;
 }
 
 .spinner span:last-of-type {
-    left: 80px;
+    left: 96px;
     -webkit-animation-delay: 0.8s;
     animation-delay: 0.8s;
 }
@@ -2446,13 +2349,11 @@ section.chef {
 
     0%,
     100% {
-        opacity: .3;
-        transform: translateY(0);
+        opacity: .5;
     }
 
     50% {
         opacity: 1;
-        transform: translateY(-15px);
     }
 }
 
@@ -2507,12 +2408,9 @@ section.chef {
     justify-content: center;
 }
 
-
-
 .tab-content>.tab-pane {
     position: relative;
 }
-
 
 .loading {
     position: absolute;
