--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -43,7 +43,6 @@
     .chef-info { padding-left: 20px; padding-right: 20px; }
     .right_menu_icon { margin-top: 0;}
     .navbar-collapse.collapse { display: none!important;}
-	.item_badge { width: 90px!important; height: 90px!important; } 
 	.badge_btext { font-size: 28px; }
 	.badge_stext { font-size: 18px; margin-top: -5px; }
 	.item_name { font-size: 30px; line-height: 48px; }
@@ -117,34 +116,36 @@
 }
  
 @media only screen and (max-width: 992px) {
+    .navbar-nav>li>a { font-size: 18px; margin: 0 9px; }
+    .right_menu_addr i { color: #333; margin-right: 10px; }
 	.right_menu_addr i.fa { color: #990100; }
-	.right_menu_addr { padding: 0 15px 15px; }
+	.right_menu_addr { padding: 0 15px 15px; flex-direction: column; align-items: flex-start; }
 	.right_menu_addr span + span { padding-left: 0; border: none; }
-	.right_menu_addr span { display: block; margin-right: 0; margin-bottom: 10px; }
+	.right_menu_addr span { display: flex; align-items: center; margin-right: 0; margin-bottom: 12px; color: #333; font-size: 14px; text-transform: none; }
+    .navbar { flex: 1; }
     .navbar-brand{margin-top: 8px;}
-	.search_icon { position: absolute; right: 0; bottom: 0; background: none; border: none; padding: 5px; color: #fff; }
-	.search_input { background: none; box-shadow: none; border-width: 0 0 1px 0; padding: 6px 24px 6px 0; color: #fff; border-color: #fff; border-radius: 0; }
-	.search_input::-webkit-input-placeholder { color: #fff; }
-	.search_input::-moz-placeholder { color: #fff; }
-	.search_input:-ms-input-placeholder { color: #fff; }
-	.search_input:-moz-placeholder { color: #fff;}
+	.search_icon { position: absolute; right: 0; bottom: 0; background: none; border: none; padding: 5px 10px; height: 100%; color: #777; }
+	.search_input { background-color: #f5f5f5; box-shadow: none; padding: 6px 12px; color: #777; border: 1px solid #e4ded9; }
+    .search_input:focus {background-color: #f5f5f5;}
+	.search_input::-webkit-input-placeholder { color: #777; }
+	.search_input::-moz-placeholder { color: #777; }
+	.search_input:-ms-input-placeholder { color: #777; }
+	.search_input:-moz-placeholder { color: #777;}
 	.right_menu_search form { position: relative; }
 	.right_menu_search { padding: 15px; }
-    #map { height: 300px; }
     .footer_pos { top: 20px; position: relative; padding-bottom: 20px; }
     #footer .footer_border { border: none; padding-left: 0; }
     #footer .footer_ttl_padd, #footer .footer_txt { padding-left: 0; }
 }
 @media only screen and (max-width: 1199px) {
-	.item_img { margin: 0 0 -70px; padding-right: 0; }
+	.item_img { padding-right: 0; }
     .item_details { clear: both; text-align: center; }
-    .carousel-caption { padding-top: 120px; display: flex; align-items: center; flex-wrap: wrap; flex-direction: column;}
-    .item_name, .carousel-caption p, .item_link_box { text-align: center; }
+    .carousel-caption { display: flex; align-items: center; flex-wrap: wrap; flex-direction: column;}
+    .carousel-caption p, .item_link_box { text-align: center; }
     .item_name:after { left: 50%; transform: translateX(-50%); }
     .item_link { margin-top: 10px; }
-    .carousel-indicators { bottom: 10px; }
+    .carousel-indicators { bottom: 20px; }
     .carousel .container { padding-bottom: 30px; }
-    .item_badge { width: 100px; height: 100px; right: 0; bottom: 15%; transform: translate(-15%, -15%); }
     .badge_btext { font-size: 26px; }
     .badge_stext { font-size: 18px; }
 }
